--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="secondary_hover">#ECB100</color>
     <color name="primary_hover">#693BB8</color>
     <color name="primary_pressed">#3939FF</color>
-    <color name="primary_light">#569CE0</color>
+    <color name="primary_light">#8749F2</color>
     <color name="primary_light_hover">#2C84D8</color>
     <color name="primary_light_pressed">#206BB3</color>
     <color name="primary_dark">#195289</color>
