add routing java

--- a/app/src/main/res/layout/activity_sign_up_succes.xml
+++ b/app/src/main/res/layout/activity_sign_up_succes.xml
@@ -51,14 +51,18 @@
         android:layout_below="@id/text1"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNext"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/_20sdp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/white"
-        android:text="take me to bux"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:background="@drawable/ic_box_purple"
-        android:layout_height="wrap_content"/>
+        android:text="take me to bux"
+        android:textColor="@color/white" />
 </RelativeLayout>
