--- a/app/src/main/res/layout/activity_tiket.xml
+++ b/app/src/main/res/layout/activity_tiket.xml
@@ -34,14 +34,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@+id/appbar">
+        android:layout_below="@+id/appbar"
+        android:orientation="vertical">
 
         <include
             layout="@layout/item_tiket"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
 
     </LinearLayout>
